--- a/hypnos.html
+++ b/hypnos.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="hypnos.css" />
     <title>Hypnos Hotel</title>
+
+    <nav class="navbar navbar-dark bg-drak">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#"
+            ><span>Accueil</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><span>Réservation</span></a>
+        </li>
+      </ul>
+    </nav>
   </head>
   <body>
-    <p>Welcome to Hypnos !</p>
+    <div class="start">
+      <img src="image/best tous.jpg" class="rounded mx-auto d-block alt="..." />
+    </div>
+    <p>
+      Bienvenue sur Hypnos, fondé en 2004, nous avons à notre actif 7
+      établissements à vous faire découvrir pour vos escapades en amour.<br />
+      Présent dans différentes régions de la France nous sommes convaincu qu'un
+      établissement vous conviendra.<br />
+      Chacune de nos suites luxueuses est accompagnée d'un spa privatif.
+    </p>
   </body>
 </html>
