--- a/hypnos.html
+++ b/hypnos.html
@@ -7,6 +7,13 @@
 
     <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="hypnos.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Hypnos Hotel</title>
 
     <nav class="navbar navbar-dark bg-drak">
@@ -33,5 +40,14 @@
       établissement vous conviendra.<br />
       Chacune de nos suites luxueuses est accompagnée d'un spa privatif.
     </p>
+
+    <div class="frontpic">
+      <img class="Paris" src="Photo Hotel/Photo un.jpg" />
+      <img
+        class="Marseille"
+        src="Photo Hotel Marseille/Photo Marseille un.jpg"
+      />
+      <img class="Corse" src="Photo Hotel Corse/Hotel Corse un.jpg" />
+    </div>
   </body>
 </html>
