--- a/hypnos.html
+++ b/hypnos.html
@@ -33,7 +33,8 @@
     <div class="start">
       <img src="image/best tous.jpg" class="rounded mx-auto d-block alt="..." />
     </div>
-    <p>
+
+    <p class="Toplane">
       Bienvenue sur Hypnos, fondé en 2004, nous avons à notre actif 7
       établissements à vous faire découvrir pour vos escapades en amour.<br />
       Présent dans différentes régions de la France nous sommes convaincu qu'un
@@ -43,6 +44,7 @@
 
     <div class="frontpic">
       <img class="Paris" src="Photo Hotel/Photo un.jpg" />
+
       <img
         class="Marseille"
         src="Photo Hotel Marseille/Photo Marseille un.jpg"
