travaille sur les page perso des hotel
importation du code pour defile les images + placement du texte et button

--- a/Paris Palace.html
+++ b/Paris Palace.html
@@ -29,12 +29,35 @@
     </nav>
   </head>
   <body>
-    <div class="main">
-      <div class="table1">
-        <h2>Paris Palace<br /></h2>
+    <div class="Paris-slide">
+      <h1>Paris Palace</h1>
+      <br />
+      <img src="Image Hotel/Photo Hotel/Photo un.jpg" alt="" class="pic" />
+      <img src="Image Hotel/Photo Hotel/Photo deux.jpg" alt="" class="pic" />
+      <img src="Image Hotel/Photo Hotel/Photo trois.jpg" alt="" class="pic" />
+      <img
+        src="Image Hotel/Photo Hotel Alsace/Photo Alsace un.jpg"
+        alt=""
+        class="pic"
+      />
+    </div>
+    <div class="desc">
+      <h3>Suite Paris Palace pour deux</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna
+        nisi, vestibulum id magna semper,<br />
+        accumsan dictum mi. Ut tortor lacus, volutpat aliquam euismod sed,
+        feugiat ut odio. Nulla porttitor libero
+        <br />
+        eros, at tincidunt dolor elementum iaculis. Sed laoreet odio id risus
+        placerat, at aliquet nunc pretium.<br />
+        Aliquam convallis est non orci pretium, vitae fermentum lorem tincidunt.
+        Aenean ac facilisis mauris. <br />Praesent iaculis tortor id dui tempor,
+        ut ultrices neque facilisis.
+      </p>
+      <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
-        <img class="décoration" src="Image Hotel/Photo Hotel/Photo un.jpg" />
-      </div>
+      <button type="button" class="btn btn-outline-light">Réservé</button>
     </div>
   </body>
 </html>
