avancement page perso

--- a/Paris Palace.html
+++ b/Paris Palace.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-dark bg-drak">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#"
+          <a class="nav-link active" aria-current="page" href="hypnos.html"
             ><span>Accueil</span></a
           >
         </li>
@@ -35,11 +35,7 @@
       <img src="Image Hotel/Photo Hotel/Photo un.jpg" alt="" class="pic" />
       <img src="Image Hotel/Photo Hotel/Photo deux.jpg" alt="" class="pic" />
       <img src="Image Hotel/Photo Hotel/Photo trois.jpg" alt="" class="pic" />
-      <img
-        src="Image Hotel/Photo Hotel Alsace/Photo Alsace un.jpg"
-        alt=""
-        class="pic"
-      />
+      <img src="Image Hotel/Photo Hotel/Photo quatre.jpg" alt="" class="pic" />
     </div>
     <div class="desc">
       <h3>Suite Paris Palace pour deux</h3>
@@ -58,6 +54,57 @@
       <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
       <button type="button" class="btn btn-outline-light">Réservé</button>
+    </div>
+    <div class="Little-pic">
+      <img src="Image Hotel/Photo Hotel/Photo un.jpg" alt="" class="lp" />
+      <img src="Image Hotel/Photo Hotel/Photo deux.jpg" alt="" class="lp" />
+      <img src="Image Hotel/Photo Hotel/Photo trois.jpg" alt="" class="lp" />
+      <img src="Image Hotel/Photo Hotel/Photo quatre.jpg" alt="" class="lp" />
+    </div>
+
+    <div class="Other-pic">
+      <h2>Découvrez Nos Autres établissements</h2>
+      <div class="table1">
+        <a href="...">
+          <img
+            src="Image Hotel/Photo Hotel Alsace/Photo Alsace un.jpg"
+            alt=""
+            class="op"
+        /></a>
+        <a href="..."
+          ><img
+            src="Image Hotel/Photo Hotel Corse/Hotel Corse un.jpg"
+            alt=""
+            class="op"
+        /></a>
+        <a href="..."
+          ><img
+            src="Image Hotel/Photo Hotel Marseille/Photo Marseille un.jpg"
+            alt=""
+            class="op"
+        /></a>
+      </div>
+
+      <div class="table2">
+        <a href="...">
+          <img
+            src="Image Hotel/Photo Hotel Monaco/Hotel Monaco un.jpg"
+            alt=""
+            class="op"
+        /></a>
+        <a href="...">
+          <img
+            src="Image Hotel/Photo Hotel Nice/Hotel Nice un.jpg"
+            alt=""
+            class="op"
+        /></a>
+        <a href="..."
+          ><img
+            src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse un.jpg"
+            alt=""
+            class="op"
+        /></a>
+      </div>
     </div>
   </body>
 </html>
