--- a/Paris Palace.html
+++ b/Paris Palace.html
@@ -23,7 +23,7 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><span>Réservation</span></a>
+          <a class="nav-link" href="Reserve.html"><span>Réservation</span></a>
         </li>
       </ul>
     </nav>
