corrrigeee des petits imperfection

--- a/Monaco Garden.html
+++ b/Monaco Garden.html
@@ -89,65 +89,71 @@
       </p>
       <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
-      <button type="button" class="btn btn-outline-light">Réservé</button>
+      <a href="Reserve.html"
+        ><button type="button" class="btn btn-outline-light">Réservé</button></a
+      >
     </div>
     <div class="Little-pic">
-      <img
-        src="Image Hotel/Photo Hotel Monaco/Hotel Monaco un.jpg"
-        alt=""
-        class="lp"
-      />
-      <img
-        src="Image Hotel/Photo Hotel Monaco/Hotel Monaco deux.jpg"
-        alt=""
-        class="lp"
-      />
-      <img
-        src="Image Hotel/Photo Hotel Monaco/Hotel Monaco trois.jpg"
-        alt=""
-        class="lp"
-      />
-      <img
-        src="Image Hotel/Photo Hotel Monaco/Hotel Monaco quatre.jpg"
-        alt=""
-        class="lp"
-      />
+      <a href="Image Hotel/Photo Hotel Monaco/Hotel Monaco un.jpg">
+        <img
+          src="Image Hotel/Photo Hotel Monaco/Hotel Monaco un.jpg"
+          alt=""
+          class="lp"
+      /></a>
+      <a href="Image Hotel/Photo Hotel Monaco/Hotel Monaco deux.jpg">
+        <img
+          src="Image Hotel/Photo Hotel Monaco/Hotel Monaco deux.jpg"
+          alt=""
+          class="lp"
+      /></a>
+      <a href="Image Hotel/Photo Hotel Monaco/Hotel Monaco trois.jpg">
+        <img
+          src="Image Hotel/Photo Hotel Monaco/Hotel Monaco trois.jpg"
+          alt=""
+          class="lp"
+      /></a>
+      <a href="Image Hotel/Photo Hotel Monaco/Hotel Monaco quatre.jpg">
+        <img
+          src="Image Hotel/Photo Hotel Monaco/Hotel Monaco quatre.jpg"
+          alt=""
+          class="lp"
+      /></a>
     </div>
 
     <div class="Other-pic">
       <h2>Découvrez Nos Autres établissements</h2>
       <div class="table1">
-        <a href="...">
+        <a href="Plaza Toulouse.html">
           <img
             src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse un.jpg"
             alt=""
             class="op"
         /></a>
-        <a href="..."
+        <a href="Le Grand Marseille.html"
           ><img
             src="Image Hotel/Photo Hotel Marseille/Photo Marseille un.jpg"
             alt=""
             class="op"
         /></a>
-        <a href="..."
+        <a href="Paris Palace.html"
           ><img src="Image Hotel/Photo Hotel/Photo un.jpg" alt="" class="op"
         /></a>
       </div>
 
       <div class="table2">
-        <a href="...">
+        <a href="Alsace Hotel.html">
           <img
             src="Image Hotel/Photo Hotel Alsace/Photo Alsace un.jpg"
             alt=""
             class="op"
         /></a>
-        <a href="...">
+        <a href="Nice Azur.html">
           <img
             src="Image Hotel/Photo Hotel Nice/Hotel Nice un.jpg"
             alt=""
             class="op"
         /></a>
-        <a href="..."
+        <a href="Corse Area.html"
           ><img
             src="Image Hotel/Photo Hotel Corse/Hotel Corse un.jpg"
             alt=""
