--- a/hypnos.html
+++ b/hypnos.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <div class="start">
-      <img src="image/best tous.jpg" class="rounded mx-auto d-block alt="..." />
+      <span><img src="image/best tous.jpg" class="rounded mx-auto d-block alt="..." /></span>
     </div>
 
     <p class="Toplane">
