front finish and connect to serv

--- a/Paris Palace.html
+++ b/Paris Palace.html
@@ -25,6 +25,7 @@
         <li class="nav-item">
           <a class="nav-link" href="Reserve.html"><span>Réservation</span></a>
         </li>
+
         <div class="connexion">
           <li class="nav-item">
             <a class="nav-link" href="connect.html"
@@ -60,16 +61,15 @@
     <div class="desc">
       <h3>Suite Paris Palace pour deux</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna
-        nisi, vestibulum id magna semper,<br />
-        accumsan dictum mi. Ut tortor lacus, volutpat aliquam euismod sed,
-        feugiat ut odio. Nulla porttitor libero
+        Idéalement situé entre le Louvre et l’Opéra Garnier, l’Hôtel du
+        Louvre,<br />
+        vous invite à découvrir la Ville Lumière tel un vrai Parisien.<br />
+        Ce lieu chargé d’histoire encourage à l’art de flâner,
         <br />
-        eros, at tincidunt dolor elementum iaculis. Sed laoreet odio id risus
-        placerat, at aliquet nunc pretium.<br />
-        Aliquam convallis est non orci pretium, vitae fermentum lorem tincidunt.
-        Aenean ac facilisis mauris. <br />Praesent iaculis tortor id dui tempor,
-        ut ultrices neque facilisis.
+        pour un séjour mémorable.<br />
+        L’Hôtel du Louvre offre 3 chambres spacieuses et baignées de lumière
+        <br />Chargées d’histoire, elles sont décorées dans un style typiquement
+        parisien.
       </p>
       <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
