--- a/hypnos.html
+++ b/hypnos.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="hypnos.css" />
+    <link rel="shortcut icon" type="image/png" href="image/favicon.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link
@@ -39,7 +40,7 @@
   </head>
   <body>
     <div class="start">
-      <span><img src="image/best tous.jpg" class="rounded mx-auto d-block alt="..." /></span>
+      <span class="top"><img src="image/best tous.jpg" class="rounded mx-auto d-block alt="..." /></span>
     </div>
 
     <p class="Toplane">
@@ -114,4 +115,22 @@
 
         </div>
   </body>
+  <footer class="bd-footer py mt bg-dark">
+    <div class="container py-5">
+      <img class="foot" src="image/H-logo.jpg" />
+      <a href="contacter.html"><button type="button" class="btn btn-dark"  > <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+        <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+        </svg>
+        Nous contacter
+      </button></a>
+      <a href="guide.html"><button type="button" class="btn btn-dark"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-wrench" viewBox="0 0 16 16">
+      <path d="M.102 2.223A3.004 3.004 0 0 0 3.78 5.897l6.341 6.252A3.003 3.003 0 0 0 13 16a3 3 0 1 0-.851-5.878L5.897 3.781A3.004 3.004 0 0 0 2.223.1l2.141 2.142L4 4l-1.757.364L.102 2.223zm13.37 9.019.528.026.287.445.445.287.026.529L15 13l-.242.471-.026.529-.445.287-.287.445-.529.026L13 15l-.471-.242-.529-.026-.287-.445-.445-.287-.026-.529L11 13l.242-.471.026-.529.445-.287.287-.445.529-.026L13 11l.471.242z"/>
+      </svg> En savoir plus</button></a>
+      <div class="text-foot">
+      <p>Créateur du site : Tristan Macquet</p>
+      </div>
+
+    </div>
+
+  </footer>
 </html>
