--- a/Alsace Hotel.html
+++ b/Alsace Hotel.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="Paris Palace.css" />
+    <link rel="shortcut icon" type="image/png" href="image/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link
@@ -23,12 +24,14 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Reserve.html"><span>Réservation</span></a>
+          <a class="nav-link" href="reservation.php"
+            ><span>Réservation</span></a
+          >
         </li>
 
         <div class="connexion">
           <li class="nav-item">
-            <a class="nav-link" href="connect.html"
+            <a class="nav-link" href="connexion.php"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -77,20 +80,18 @@
     <div class="desc">
       <h3>Suite Alsace Hotel deux personnes</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna
-        nisi, vestibulum id magna semper,<br />
-        accumsan dictum mi. Ut tortor lacus, volutpat aliquam euismod sed,
-        feugiat ut odio. Nulla porttitor libero
-        <br />
-        eros, at tincidunt dolor elementum iaculis. Sed laoreet odio id risus
-        placerat, at aliquet nunc pretium.<br />
-        Aliquam convallis est non orci pretium, vitae fermentum lorem tincidunt.
-        Aenean ac facilisis mauris. <br />Praesent iaculis tortor id dui tempor,
-        ut ultrices neque facilisis.
+        Situé sur les rives de la rivière Ill, l'Alsace Hotel possède 5 étoiles,
+        à 5 minutes à pied du palais du Rhin, <br />
+        à 350 mètres du marché de Noël de Strasbourg et à 600 mètres de la
+        cathédrale.<br />
+        Installé dans un bâtiment du XIXe siècle, chaque hébergement présente
+        une décoration contemporaine. <br />
+        Ils sont munis d'une télévision par satellite à écran plat avec des
+        chaînes internationales.<br />
       </p>
       <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
-      <a href="Reserve.html"
+      <a href="reservation.php"
         ><button type="button" class="btn btn-outline-light">Réservé</button></a
       >
     </div>
