--- a/Monaco Garden.html
+++ b/Monaco Garden.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="Paris Palace.css" />
+    <link rel="shortcut icon" type="image/png" href="image/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link
@@ -23,11 +24,13 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Reserve.html"><span>Réservation</span></a>
+          <a class="nav-link" href="reservation.php"
+            ><span>Réservation</span></a
+          >
         </li>
         <div class="connexion">
           <li class="nav-item">
-            <a class="nav-link" href="connect.html"
+            <a class="nav-link" href="connexion.php"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -76,20 +79,22 @@
     <div class="desc">
       <h3>Suite Monaco Garden deux personnes</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna
-        nisi, vestibulum id magna semper,<br />
-        accumsan dictum mi. Ut tortor lacus, volutpat aliquam euismod sed,
-        feugiat ut odio. Nulla porttitor libero
+        L'architecture moderniste frappante du Monaco Garden émerge de la
+        péninsule rocheuse de Roquebrune-Cap-Martin <br />
+        comme si elle se frayait un chemin dans la mer Méditerranée
+        scintillante. <br />
+        Des vues spectaculaires sur le littoral prennent l'Italie à l'est,
         <br />
-        eros, at tincidunt dolor elementum iaculis. Sed laoreet odio id risus
-        placerat, at aliquet nunc pretium.<br />
-        Aliquam convallis est non orci pretium, vitae fermentum lorem tincidunt.
-        Aenean ac facilisis mauris. <br />Praesent iaculis tortor id dui tempor,
-        ut ultrices neque facilisis.
+        Monte Carlo à l'ouest, le tout baigné d'une lumière éclatante. <br />
+        Le cadre est incomparable, la mer et le ciel sans fin vus de chaque
+        pièce, <br />
+        et lorsque vous sortez dans la brise chaude et salée, <br />
+        il suffit d'un instant pour vous glisser doucement dans le temps de la
+        Riviera.<br />
       </p>
       <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
-      <a href="Reserve.html"
+      <a href="reservation.php"
         ><button type="button" class="btn btn-outline-light">Réservé</button></a
       >
     </div>
