--- a/Paris Palace.html
+++ b/Paris Palace.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="Paris Palace.css" />
+    <link rel="shortcut icon" type="image/png" href="image/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link
@@ -23,12 +24,14 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Reserve.html"><span>Réservation</span></a>
+          <a class="nav-link" href="reservation.php"
+            ><span>Réservation</span></a
+          >
         </li>
 
         <div class="connexion">
           <li class="nav-item">
-            <a class="nav-link" href="connect.html"
+            <a class="nav-link" href="connexion.php"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -73,7 +76,7 @@
       </p>
       <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
-      <a href="Reserve.html"
+      <a href="reservation.php"
         ><button type="button" class="btn btn-outline-light">Réservé</button></a
       >
     </div>
