--- a/Le Grand Marseille.html
+++ b/Le Grand Marseille.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="Paris Palace.css" />
+    <link rel="shortcut icon" type="image/png" href="image/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link
@@ -23,11 +24,13 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Reserve.html"><span>Réservation</span></a>
+          <a class="nav-link" href="reservation.php"
+            ><span>Réservation</span></a
+          >
         </li>
         <div class="connexion">
           <li class="nav-item">
-            <a class="nav-link" href="connect.html"
+            <a class="nav-link" href="connexion.php"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -76,20 +79,15 @@
     <div class="desc">
       <h3>Suite Le Grand Marseille deux personnes</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna
-        nisi, vestibulum id magna semper,<br />
-        accumsan dictum mi. Ut tortor lacus, volutpat aliquam euismod sed,
-        feugiat ut odio. Nulla porttitor libero
-        <br />
-        eros, at tincidunt dolor elementum iaculis. Sed laoreet odio id risus
-        placerat, at aliquet nunc pretium.<br />
-        Aliquam convallis est non orci pretium, vitae fermentum lorem tincidunt.
-        Aenean ac facilisis mauris. <br />Praesent iaculis tortor id dui tempor,
-        ut ultrices neque facilisis.
+        Suite privée du balcon du vieux port Marseille ! <br />
+        Cet établissement est à 12 minutes à pied de la plage.<br />
+        Située à 1,8 km de la Fausse Monnaie, <br />
+        la Suite privée du balcon du vieux port Marseille propose un bar,<br />
+        une terrasse et une réception ouverte 24h/24.<br />
       </p>
       <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
-      <a href="Reserve.html"
+      <a href="reservation.php"
         ><button type="button" class="btn btn-outline-light">Réservé</button></a
       >
     </div>
