--- a/Plaza Toulouse.html
+++ b/Plaza Toulouse.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="Paris Palace.css" />
+    <link rel="shortcut icon" type="image/png" href="image/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link
@@ -23,12 +24,14 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Reserve.html"><span>Réservation</span></a>
+          <a class="nav-link" href="reservation.php"
+            ><span>Réservation</span></a
+          >
         </li>
 
         <div class="connexion">
           <li class="nav-item">
-            <a class="nav-link" href="connect.html"
+            <a class="nav-link" href="connexion.php"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -77,20 +80,20 @@
     <div class="desc">
       <h3>Suite Plaza Toulouse deux personnes</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna
-        nisi, vestibulum id magna semper,<br />
-        accumsan dictum mi. Ut tortor lacus, volutpat aliquam euismod sed,
-        feugiat ut odio. Nulla porttitor libero
-        <br />
-        eros, at tincidunt dolor elementum iaculis. Sed laoreet odio id risus
-        placerat, at aliquet nunc pretium.<br />
-        Aliquam convallis est non orci pretium, vitae fermentum lorem tincidunt.
-        Aenean ac facilisis mauris. <br />Praesent iaculis tortor id dui tempor,
-        ut ultrices neque facilisis.
+        En bord de quai de Garonne à quelques pas de Capitole, <br />
+        flotte à travers feuilles d’un jardin luxuriant et clapotis d’un bassin
+        piscine, <br />
+        un art de vivre à la toulousaine que l’on aime. <br />
+        L’hôtel Maison Soclo s’est installé dans cette demeure du XVIIIème où
+        voisins de quartier, <br />
+        apprentis globe-trotters, voyageurs d’affaires, dévoreurs de brunch, s’y
+        rencontrent, y discutent, <br />
+        y mangent, y dorment, y nagent, y bronzent, y lisent, y jouent… Y
+        vivent.<br />
       </p>
       <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
-      <a href="Reserve.html"
+      <a href="reservation.php"
         ><button type="button" class="btn btn-outline-light">Réservé</button></a
       >
     </div>
