--- a/Le Grand Marseille.html
+++ b/Le Grand Marseille.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="bootstrap.min.css" />
-    <link rel="stylesheet" href="Paris Palace.css" />
+    <link rel="stylesheet" href="hotel.css" />
     <link rel="shortcut icon" type="image/png" href="image/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-dark bg-drak">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="hypnos.html"
+          <a class="nav-link active" aria-current="page" href="index.html"
             ><span>Accueil</span></a
           >
         </li>
