--- a/Le Grand Marseille.html
+++ b/Le Grand Marseille.html
@@ -24,13 +24,13 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="reservation.php"
+          <a class="nav-link" href="reservation.html"
             ><span>Réservation</span></a
           >
         </li>
         <div class="connexion">
           <li class="nav-item">
-            <a class="nav-link" href="connexion.php"
+            <a class="nav-link" href="connexion.html"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -57,22 +57,22 @@
       <br />
       <img
         src="Image Hotel/Photo Hotel Marseille/Photo Marseille un.jpg"
-        alt=""
+        alt="photo hotel marseille"
         class="pic"
       />
       <img
         src="Image Hotel/Photo Hotel Marseille/Photo Marseille deux.jpg"
-        alt=""
+        alt="photo hotel marseille"
         class="pic"
       />
       <img
         src="Image Hotel/Photo Hotel Marseille/Photo Marseille trois.jpg"
-        alt=""
+        alt="photo hotel marseille"
         class="pic"
       />
       <img
         src="Image Hotel/Photo Hotel Marseille/Photo Marseille qautre.jpg"
-        alt=""
+        alt="photo hotel marseille"
         class="pic"
       />
     </div>
@@ -87,7 +87,7 @@
       </p>
       <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
-      <a href="reservation.php"
+      <a href="reservation.html"
         ><button type="button" class="btn btn-outline-light">Réservé</button></a
       >
     </div>
@@ -95,25 +95,25 @@
       <a href="Image Hotel/Photo Hotel Marseille/Photo Marseille un.jpg">
         <img
           src="Image Hotel/Photo Hotel Marseille/Photo Marseille un.jpg"
-          alt=""
+          alt="photo hotel marseille"
           class="lp"
       /></a>
       <a href="Image Hotel/Photo Hotel Marseille/Photo Marseille deux.jpg">
         <img
           src="Image Hotel/Photo Hotel Marseille/Photo Marseille deux.jpg"
-          alt=""
+          alt="photo hotel marseille"
           class="lp"
       /></a>
       <a href="Image Hotel/Photo Hotel Marseille/Photo Marseille trois.jpg">
         <img
           src="Image Hotel/Photo Hotel Marseille/Photo Marseille trois.jpg"
-          alt=""
+          alt="photo hotel marseille"
           class="lp"
       /></a>
       <a href="Image Hotel/Photo Hotel Marseille/Photo Marseille qautre.jpg">
         <img
           src="Image Hotel/Photo Hotel Marseille/Photo Marseille qautre.jpg"
-          alt=""
+          alt="photo hotel marseille"
           class="lp"
       /></a>
     </div>
@@ -124,17 +124,20 @@
         <a href="Alsace Hotel.html">
           <img
             src="Image Hotel/Photo Hotel Alsace/Photo Alsace un.jpg"
-            alt=""
+            alt="photo hotel alsace"
             class="op"
         /></a>
         <a href="Corse Area.html"
           ><img
             src="Image Hotel/Photo Hotel Corse/Hotel Corse un.jpg"
-            alt=""
+            alt="photo hotel corse"
             class="op"
         /></a>
         <a href="Paris Palace.html"
-          ><img src="Image Hotel/Photo Hotel/Photo un.jpg" alt="" class="op"
+          ><img
+            src="Image Hotel/Photo Hotel/Photo un.jpg"
+            alt="photo hotel paris"
+            class="op"
         /></a>
       </div>
 
@@ -142,19 +145,19 @@
         <a href="Monaco Garden.html">
           <img
             src="Image Hotel/Photo Hotel Monaco/Hotel Monaco un.jpg"
-            alt=""
+            alt="photo hotel monaco"
             class="op"
         /></a>
         <a href="Nice Azur.html">
           <img
             src="Image Hotel/Photo Hotel Nice/Hotel Nice un.jpg"
-            alt=""
+            alt="photo hotel nice"
             class="op"
         /></a>
         <a href="Plaza Toulouse.html"
           ><img
             src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse un.jpg"
-            alt=""
+            alt="photo hotel toulouse"
             class="op"
         /></a>
       </div>
