--- a/Monaco Garden.html
+++ b/Monaco Garden.html
@@ -24,13 +24,13 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="reservation.php"
+          <a class="nav-link" href="reservation.html"
             ><span>Réservation</span></a
           >
         </li>
         <div class="connexion">
           <li class="nav-item">
-            <a class="nav-link" href="connexion.php"
+            <a class="nav-link" href="connexion.html"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -57,22 +57,22 @@
       <br />
       <img
         src="Image Hotel/Photo Hotel Monaco/Hotel Monaco un.jpg"
-        alt=""
+        alt="photo hotel monaco"
         class="pic"
       />
       <img
         src="Image Hotel/Photo Hotel Monaco/Hotel Monaco deux.jpg"
-        alt=""
+        alt="photo hotel monaco"
         class="pic"
       />
       <img
         src="Image Hotel/Photo Hotel Monaco/Hotel Monaco trois.jpg"
-        alt=""
+        alt="photo hotel monaco"
         class="pic"
       />
       <img
         src="Image Hotel/Photo Hotel Monaco/Hotel Monaco quatre.jpg"
-        alt=""
+        alt="photo hotel monaco"
         class="pic"
       />
     </div>
@@ -94,7 +94,7 @@
       </p>
       <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
-      <a href="reservation.php"
+      <a href="reservation.html"
         ><button type="button" class="btn btn-outline-light">Réservé</button></a
       >
     </div>
@@ -102,25 +102,25 @@
       <a href="Image Hotel/Photo Hotel Monaco/Hotel Monaco un.jpg">
         <img
           src="Image Hotel/Photo Hotel Monaco/Hotel Monaco un.jpg"
-          alt=""
+          alt="photo hotel monaco"
           class="lp"
       /></a>
       <a href="Image Hotel/Photo Hotel Monaco/Hotel Monaco deux.jpg">
         <img
           src="Image Hotel/Photo Hotel Monaco/Hotel Monaco deux.jpg"
-          alt=""
+          alt="photo hotel monaco"
           class="lp"
       /></a>
       <a href="Image Hotel/Photo Hotel Monaco/Hotel Monaco trois.jpg">
         <img
           src="Image Hotel/Photo Hotel Monaco/Hotel Monaco trois.jpg"
-          alt=""
+          alt="photo hotel monaco"
           class="lp"
       /></a>
       <a href="Image Hotel/Photo Hotel Monaco/Hotel Monaco quatre.jpg">
         <img
           src="Image Hotel/Photo Hotel Monaco/Hotel Monaco quatre.jpg"
-          alt=""
+          alt="photo hotel monaco"
           class="lp"
       /></a>
     </div>
@@ -131,17 +131,20 @@
         <a href="Plaza Toulouse.html">
           <img
             src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse un.jpg"
-            alt=""
+            alt="photo hotel toulouse"
             class="op"
         /></a>
         <a href="Le Grand Marseille.html"
           ><img
             src="Image Hotel/Photo Hotel Marseille/Photo Marseille un.jpg"
-            alt=""
+            alt="photo hotel marseille"
             class="op"
         /></a>
         <a href="Paris Palace.html"
-          ><img src="Image Hotel/Photo Hotel/Photo un.jpg" alt="" class="op"
+          ><img
+            src="Image Hotel/Photo Hotel/Photo un.jpg"
+            alt="photo hotel paris"
+            class="op"
         /></a>
       </div>
 
@@ -149,19 +152,19 @@
         <a href="Alsace Hotel.html">
           <img
             src="Image Hotel/Photo Hotel Alsace/Photo Alsace un.jpg"
-            alt=""
+            alt="photo hotel alsace"
             class="op"
         /></a>
         <a href="Nice Azur.html">
           <img
             src="Image Hotel/Photo Hotel Nice/Hotel Nice un.jpg"
-            alt=""
+            alt="photo hotel nice"
             class="op"
         /></a>
         <a href="Corse Area.html"
           ><img
             src="Image Hotel/Photo Hotel Corse/Hotel Corse un.jpg"
-            alt=""
+            alt="photo hotel corse"
             class="op"
         /></a>
       </div>
