--- a/Paris Palace.html
+++ b/Paris Palace.html
@@ -16,6 +16,8 @@
     />
 
     <title>Paris Palace</title>
+  </head>
+  <body>
     <nav class="navbar navbar-dark bg-drak">
       <ul class="nav">
         <li class="nav-item">
@@ -24,14 +26,14 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="reservation.php"
+          <a class="nav-link" href="reservation.html"
             ><span>Réservation</span></a
           >
         </li>
 
         <div class="connexion">
           <li class="nav-item">
-            <a class="nav-link" href="connexion.php"
+            <a class="nav-link" href="connexion.html"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -51,15 +53,29 @@
         </div>
       </ul>
     </nav>
-  </head>
-  <body>
     <div class="Paris-slide">
       <h1>Paris Palace</h1>
       <br />
-      <img src="Image Hotel/Photo Hotel/Photo un.jpg" alt="" class="pic" />
-      <img src="Image Hotel/Photo Hotel/Photo deux.jpg" alt="" class="pic" />
-      <img src="Image Hotel/Photo Hotel/Photo trois.jpg" alt="" class="pic" />
-      <img src="Image Hotel/Photo Hotel/Photo quatre.jpg" alt="" class="pic" />
+      <img
+        src="Image Hotel/Photo Hotel/Photo un.jpg"
+        alt="photo hotel paris"
+        class="pic"
+      />
+      <img
+        src="Image Hotel/Photo Hotel/Photo deux.jpg"
+        alt="photo hotel paris"
+        class="pic"
+      />
+      <img
+        src="Image Hotel/Photo Hotel/Photo trois.jpg"
+        alt="photo hotel paris"
+        class="pic"
+      />
+      <img
+        src="Image Hotel/Photo Hotel/Photo quatre.jpg"
+        alt="photo hotel paris"
+        class="pic"
+      />
     </div>
     <div class="desc">
       <h3>Suite Paris Palace pour deux</h3>
@@ -76,22 +92,34 @@
       </p>
       <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
-      <a href="reservation.php"
+      <a href="reservation.html"
         ><button type="button" class="btn btn-outline-light">Réservé</button></a
       >
     </div>
     <div class="Little-pic">
       <a href="Image Hotel/Photo Hotel/Photo un.jpg"
-        ><img src="Image Hotel/Photo Hotel/Photo un.jpg" alt="" class="lp"
+        ><img
+          src="Image Hotel/Photo Hotel/Photo un.jpg"
+          alt="photo hotel paris"
+          class="lp"
       /></a>
       <a href="Image Hotel/Photo Hotel/Photo deux.jpg"
-        ><img src="Image Hotel/Photo Hotel/Photo deux.jpg" alt="" class="lp"
+        ><img
+          src="Image Hotel/Photo Hotel/Photo deux.jpg"
+          alt="photo hotel paris"
+          class="lp"
       /></a>
       <a href="Image Hotel/Photo Hotel/Photo trois.jpg"
-        ><img src="Image Hotel/Photo Hotel/Photo trois.jpg" alt="" class="lp"
+        ><img
+          src="Image Hotel/Photo Hotel/Photo trois.jpg"
+          alt="photo hotel paris"
+          class="lp"
       /></a>
       <a href="Image Hotel/Photo Hotel/Photo quatre.jpg"
-        ><img src="Image Hotel/Photo Hotel/Photo quatre.jpg" alt="" class="lp"
+        ><img
+          src="Image Hotel/Photo Hotel/Photo quatre.jpg"
+          alt="photo hotel paris"
+          class="lp"
       /></a>
     </div>
 
@@ -101,19 +129,19 @@
         <a href="Alsace Hotel.html">
           <img
             src="Image Hotel/Photo Hotel Alsace/Photo Alsace un.jpg"
-            alt=""
+            alt="photo hotel alsace"
             class="op"
         /></a>
         <a href="Corse Area.html"
           ><img
             src="Image Hotel/Photo Hotel Corse/Hotel Corse un.jpg"
-            alt=""
+            alt="photo hotel corse"
             class="op"
         /></a>
         <a href="Le Grand Marseille.html"
           ><img
             src="Image Hotel/Photo Hotel Marseille/Photo Marseille un.jpg"
-            alt=""
+            alt="photo hotel marseille"
             class="op"
         /></a>
       </div>
@@ -122,19 +150,19 @@
         <a href="Monaco Garden.html">
           <img
             src="Image Hotel/Photo Hotel Monaco/Hotel Monaco un.jpg"
-            alt=""
+            alt="photo hotel monaco"
             class="op"
         /></a>
         <a href="Nice Azur.html">
           <img
             src="Image Hotel/Photo Hotel Nice/Hotel Nice un.jpg"
-            alt=""
+            alt="photo hotel nice"
             class="op"
         /></a>
         <a href="Plaza Toulouse.html"
           ><img
             src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse un.jpg"
-            alt=""
+            alt="photo hotel toulouse"
             class="op"
         /></a>
       </div>
