--- a/Plaza Toulouse.html
+++ b/Plaza Toulouse.html
@@ -16,6 +16,8 @@
     />
 
     <title>Plaza Toulouse</title>
+  </head>
+  <body>
     <nav class="navbar navbar-dark bg-drak">
       <ul class="nav">
         <li class="nav-item">
@@ -24,14 +26,14 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="reservation.php"
+          <a class="nav-link" href="reservation.html"
             ><span>Réservation</span></a
           >
         </li>
 
         <div class="connexion">
           <li class="nav-item">
-            <a class="nav-link" href="connexion.php"
+            <a class="nav-link" href="connexion.html"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -51,29 +53,27 @@
         </div>
       </ul>
     </nav>
-  </head>
-  <body>
     <div class="Paris-slide">
       <h1>Plaza Toulouse</h1>
       <br />
       <img
         src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse un.jpg"
-        alt=""
+        alt="photo hotel toulouse"
         class="pic"
       />
       <img
         src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse deux.jpg"
-        alt=""
+        alt="photo hotel toulouse"
         class="pic"
       />
       <img
         src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse trois.jpg"
-        alt=""
+        alt="photo hotel toulouse"
         class="pic"
       />
       <img
         src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse quatre.jpg"
-        alt=""
+        alt="photo hotel toulouse"
         class="pic"
       />
     </div>
@@ -93,7 +93,7 @@
       </p>
       <button type="button" class="btn btn-outline-light">100€/Nuit</button>
 
-      <a href="reservation.php"
+      <a href="reservation.html"
         ><button type="button" class="btn btn-outline-light">Réservé</button></a
       >
     </div>
@@ -101,25 +101,25 @@
       <a href="Image Hotel/Photo Hotel Toulouse/Photo Toulouse un.jpg">
         <img
           src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse un.jpg"
-          alt=""
+          alt="photo hotel toulouse"
           class="lp"
       /></a>
       <a href="Image Hotel/Photo Hotel Toulouse/Photo Toulouse deux.jpg">
         <img
           src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse deux.jpg"
-          alt=""
+          alt="photo hotel toulouse"
           class="lp"
       /></a>
       <a href="Image Hotel/Photo Hotel Toulouse/Photo Toulouse trois.jpg">
         <img
           src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse trois.jpg"
-          alt=""
+          alt="photo hotel toulouse"
           class="lp"
       /></a>
       <a href="Image Hotel/Photo Hotel Toulouse/Photo Toulouse quatre.jpg">
         <img
           src="Image Hotel/Photo Hotel Toulouse/Photo Toulouse quatre.jpg"
-          alt=""
+          alt="photo hotel toulouse"
           class="lp"
       /></a>
     </div>
@@ -130,17 +130,20 @@
         <a href="Alsace Hotel.html">
           <img
             src="Image Hotel/Photo Hotel Alsace/Photo Alsace un.jpg"
-            alt=""
+            alt="photo hotel alsace"
             class="op"
         /></a>
         <a href="Le Grand Marseille.html"
           ><img
             src="Image Hotel/Photo Hotel Marseille/Photo Marseille un.jpg"
-            alt=""
+            alt="photo hotel marseille"
             class="op"
         /></a>
         <a href="Paris Palace.html"
-          ><img src="Image Hotel/Photo Hotel/Photo un.jpg" alt="" class="op"
+          ><img
+            src="Image Hotel/Photo Hotel/Photo un.jpg"
+            alt="photo hotel paris"
+            class="op"
         /></a>
       </div>
 
@@ -148,19 +151,19 @@
         <a href="Monaco Garden.html">
           <img
             src="Image Hotel/Photo Hotel Monaco/Hotel Monaco un.jpg"
-            alt=""
+            alt="photo hotel monaco"
             class="op"
         /></a>
         <a href="Nice Azur.html">
           <img
             src="Image Hotel/Photo Hotel Nice/Hotel Nice un.jpg"
-            alt=""
+            alt="photo hotel nice"
             class="op"
         /></a>
         <a href="Corse Area.html"
           ><img
             src="Image Hotel/Photo Hotel Corse/Hotel Corse un.jpg"
-            alt=""
+            alt="photo hotel corse"
             class="op"
         /></a>
       </div>
