--- a/guide.html
+++ b/guide.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="back">
-      <a href="hypnos.html"
+      <a href="index.html"
         ><button type="reset" class="btn btn-outline-light">
           Retourner sur la page
         </button></a
