--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <nav class="navbar navbar-dark bg-drak">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#"
+          <a class="nav-link active" aria-current="page" href="index.html"
             ><span>Accueil</span></a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="reservation.php"><span>Réservation</span></a>
+          <a class="nav-link" href="reservation.html"><span>Réservation</span></a>
         </li>
       <div class="connexion">
         <li class="nav-item">
-          <a class="nav-link" href="connexion.php"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-person-circle" viewBox="0 0 18 18">
+          <a class="nav-link" href="connexion.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-person-circle" viewBox="0 0 18 18">
            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
            </svg><span>Connexion</span></a>
@@ -41,7 +41,7 @@
       </ul>
     </nav>
     <div class="start">
-      <span class="top"><img src="image/best tous.jpg" class="rounded mx-auto d-block alt="..." /></span>
+      <span class="top"><img src="image/best tous.jpg" class="rounded mx-auto d-block alt="logo" /></span>
     </div>
 
     <p class="Toplane">
@@ -119,7 +119,7 @@
   <footer class="bd-footer py mt bg-dark">
     <div class="container py-5">
       <img class="foot" src="image/H-logo.jpg" />
-      <a href="contacter.php"><button type="button" class="btn btn-dark"  > <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+      <a href="contacter.html"><button type="button" class="btn btn-dark"  > <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
         <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
         </svg>
         Nous contacter
